--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,7 +4,7 @@ ARG VARIANT="22"
 FROM mcr.microsoft.com/devcontainers/javascript-node:${VARIANT}
 
 # Install some generally useful tools
-RUN apt-get update && apt-get -y install --no-install-recommends curl git
+RUN apt-get update && apt-get -y install --no-install-recommends curl git sqlite3
 
 # Install SAP CAP SDK globally
 USER node
