--- a/.markdownlintrc
+++ b/.markdownlintrc
@@ -1,6 +1,7 @@
 {
-  "comment": "Rules for tutorial and workshop content",
+  "comment": "Rules for tutorial and workshop Markdown content",
   "MD004": { "style": "consistent" },
   "MD009": { "br_spaces": 0 },
-  "MD013": false
+  "MD013": false,
+  "MD033": false
 }
